<resources>
    <string name="app_name">MiliBrary</string>
    <string name="splash_title">당신의\n마음의 양식\n밀리브러리에서.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="nick_name">닉네임</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="find_password_under_line"><u>비밀번호 찾기</u></string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="confirm">확인</string>
    <string name="verify">인증</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="signup_input_all_form_error">모든 항목을 작성해주세요.</string>
    <string name="signup_password_input_different_error">입력하신 비밀번호가 다릅니다.</string>
    <string name="sign_up_fail">회원가입에 실패했습니다.</string>
    <string name="sign_up_success">회원가입에 성공했습니다.\n나라사랑포털에서 이메일 확인을 해주시기 바랍니다.</string>
    <string name="alert">알림</string>
    <string name="ok">확인</string>
    <string name="login_fill_all_form_error">모든 항목을 입력해주세요.</string>
    <string name="login_fail_error">로그인에 실패했습니다.</string>
    <string name="id_empty_error">아이디를 입력해주세요.</string>
    <string name="find_password_fail_error">비밀번호 찾기에 실패했습니다.</string>
    <string name="find_password_success">비밀번호 변경 메일이 발송되었습니다.\나라사랑포털 메일함을 확인해주세요.</string>

    <string name="resend_email_under_line"><u>인증 메일 재전송</u></string>
    <string name="resend_email">인증 메일 재전송</string>
    <string name="resend_email_success">회원가입 인증 메일이 재전송되었습니다.\나라사랑포털 메일함을 확인해주세요.</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="bookmark">북마크</string>
    <string name="my_page">마이페이지</string>
    <string name="password_format_error">비밀번호는 최소 8글자 이상이고 특수문자를 포함한 영문자 및 숫자만으로 이루어져야 합니다.</string>
    <string name="new_book">최신 도서</string>
    <string name="random_review">오늘의 랜덤 리뷰</string>
    <string name="random_book">오늘의 랜덤 책</string>
    <string name="description">설명</string>
    <string name="rating_and_review"><![CDATA[평점 & 리뷰]]></string>
    <string name="isbn_title">isbn : %s</string>
    <string name="my_rating">나의 평점은?</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="edit_review">리뷰 수정하기</string>
    <string name="submit">제출</string>
    <string name="review_write_hint">리뷰를 작성해주세요!</string>
    <string name="search_word">검색어</string>
    <string name="author">저자</string>
    <string name="title">제목</string>
    <string name="write_book_mark">나만의 한 줄 평을 입력해보세요!</string>
    <string name="save">저장</string>
    <string name="book_mark_content_title">나만의 한 줄 평</string>
    <string name="write_bookmark_content">나만의 한 줄 평을 입력해보세요!</string>
    <string name="complete_update_bookmark_content">북마크 한 줄 평을 업데이트 하였습니다.</string>
    <string name="delete">삭제</string>
    <string name="write_date">작성일자</string>
    <string name="sort_type">정렬기준</string>
    <string name="score">평점</string>
    <string name="review">리뷰</string>
    <string name="save_book_mark_alert">책 상세 페이지에서 북마크를 저장해보세요~!</string>
    <string name="welcome_milibrary">밀리브러리에 오신걸 환영해요~!</string>
    <string name="logout">로그아웃</string>
    <string name="logout_success">정상적으로 로그아웃 되었습니다.</string>
    <string name="logout_failed">로그아웃에 실패하였습니다.</string>
    <string name="my_review">내 리뷰</string>
    <string name="open_source">오픈소스</string>
</resources>
