<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/book_image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/isbn_date_text_view"
                    app:layout_constraintDimensionRatio="0.7:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/title_text_view" />

                <TextView
                    android:id="@+id/title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/book_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="홍길동" />

                <TextView
                    android:id="@+id/author_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/book_image"
                    app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                    tools:text="홍길동" />

                <TextView
                    android:id="@+id/category_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/book_image"
                    app:layout_constraintTop_toBottomOf="@+id/author_text_view"
                    tools:text="홍길동" />

                <TextView
                    android:id="@+id/publish_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/book_image"
                    app:layout_constraintTop_toBottomOf="@+id/category_text_view"
                    tools:text="홍길동" />

                <TextView
                    android:id="@+id/isbn_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toEndOf="@id/book_image"
                    app:layout_constraintTop_toBottomOf="@+id/publish_date_text_view"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="홍길동" />


                <TextView
                    android:id="@+id/book_mark_content_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/book_mark_content_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="@+id/book_image"
                    app:layout_constraintTop_toBottomOf="@+id/isbn_date_text_view" />


                <EditText
                    android:id="@+id/content_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_round_corner_rectangle"
                    android:gravity="start|top"
                    android:hint="@string/write_bookmark_content"
                    android:minHeight="200dp"
                    android:padding="10dp"
                    android:textCursorDrawable="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/book_mark_content_title"
                    app:layout_constraintVertical_bias="0.1" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
